--- a/main.html
+++ b/main.html
@@ -47,6 +47,7 @@
             <a class="on" href="">공연/전시</a>
             <a href="">공지사항</a>
             <a href="">마이페이지</a>
+            <a class="blank" target="_blank" href="">제주문화예술진흥원</a>
 
              
         </nav>
@@ -307,7 +308,7 @@
         팝업창 없애려면 
         아래 alert-pop 클래스명 옆에 on 삭제
     -->
-    <div class="alert-pop on">
+    <div class="alert-pop">
         <div class="outline">
             <p>로그인이 필요한 서비스입니다.</p>
             <p>로그인 페이지로 이동하시겠습니까?</p>
