--- a/main.html
+++ b/main.html
@@ -26,6 +26,13 @@
             <a class="sr-only sr-only-focusable" href="#footer">푸터 바로가기</a>
         </div>
         <!-- E:skip_navi -->
+
+        <div class="head-tools">
+            <div class="container">
+                <a class="blank" target="_blank" href="">제주문화예술진흥원</a>
+            </div>
+        </div>
+
         <!-- S:header -->
         <header id="header">
             <div class="container">
@@ -47,7 +54,6 @@
             <a class="on" href="">공연/전시</a>
             <a href="">공지사항</a>
             <a href="">마이페이지</a>
-            <a class="blank" target="_blank" href="">제주문화예술진흥원</a>
 
              
         </nav>
